// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecretsDirectoryService should automatically toggle all nodes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": undefined,
          "name": "some-secret",
          "path": "codecentric/some-secret",
          "toggled": true,
        },
        Object {
          "children": Array [
            Object {
              "children": undefined,
              "name": "something",
              "path": "codecentric/common/something",
              "toggled": true,
            },
            Object {
              "children": undefined,
              "name": "another-thing",
              "path": "codecentric/common/another-thing",
              "toggled": true,
            },
          ],
          "name": "common",
          "path": "codecentric/common",
          "toggled": true,
        },
        Object {
          "children": Array [
            Object {
              "children": undefined,
              "name": "user",
              "path": "codecentric/db/user",
              "toggled": true,
            },
            Object {
              "children": undefined,
              "name": "password",
              "path": "codecentric/db/password",
              "toggled": true,
            },
          ],
          "name": "db",
          "path": "codecentric/db",
          "toggled": true,
        },
      ],
      "name": "codecentric",
      "path": "codecentric",
      "toggled": true,
    },
  ],
  "name": "Stores",
  "path": "",
  "toggled": true,
}
`;

exports[`SecretsDirectoryService should preserve previously toggled nodes when building a new tree 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": undefined,
          "name": "some-secret",
          "path": "codecentric/some-secret",
          "toggled": false,
        },
        Object {
          "children": Array [
            Object {
              "children": undefined,
              "name": "something",
              "path": "codecentric/common/something",
              "toggled": false,
            },
            Object {
              "children": undefined,
              "name": "another-thing",
              "path": "codecentric/common/another-thing",
              "toggled": false,
            },
          ],
          "name": "common",
          "path": "codecentric/common",
          "toggled": true,
        },
        Object {
          "children": Array [
            Object {
              "children": undefined,
              "name": "user",
              "path": "codecentric/db/user",
              "toggled": false,
            },
            Object {
              "children": undefined,
              "name": "password",
              "path": "codecentric/db/password",
              "toggled": false,
            },
          ],
          "name": "db",
          "path": "codecentric/db",
          "toggled": false,
        },
      ],
      "name": "codecentric",
      "path": "codecentric",
      "toggled": true,
    },
  ],
  "name": "Stores",
  "path": "",
  "toggled": true,
}
`;

exports[`SecretsDirectoryService should transform a list of secret names into tree structure 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": undefined,
                  "name": "password",
                  "path": "codecentric/common/github/password",
                  "toggled": false,
                },
                Object {
                  "children": undefined,
                  "name": "username",
                  "path": "codecentric/common/github/username",
                  "toggled": false,
                },
              ],
              "name": "github",
              "path": "codecentric/common/github",
              "toggled": false,
            },
            Object {
              "children": Array [
                Object {
                  "children": undefined,
                  "name": "password",
                  "path": "codecentric/common/gitlab/password",
                  "toggled": false,
                },
                Object {
                  "children": undefined,
                  "name": "username",
                  "path": "codecentric/common/gitlab/username",
                  "toggled": false,
                },
              ],
              "name": "gitlab",
              "path": "codecentric/common/gitlab",
              "toggled": false,
            },
          ],
          "name": "common",
          "path": "codecentric/common",
          "toggled": false,
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": undefined,
                  "name": "notes",
                  "path": "codecentric/customers/some/notes",
                  "toggled": false,
                },
              ],
              "name": "some",
              "path": "codecentric/customers/some",
              "toggled": false,
            },
          ],
          "name": "customers",
          "path": "codecentric/customers",
          "toggled": false,
        },
      ],
      "name": "codecentric",
      "path": "codecentric",
      "toggled": true,
    },
  ],
  "name": "Stores",
  "path": "",
  "toggled": true,
}
`;
